# snowflake-mcp-sp-integration

./: .gitignore  README.md  main.py  pyproject.toml  server.py
mcp_sp_snowflake_server/: config.py  connection.py  sps_config.py  utils.py  wrapper.py
quickstart/: 00_overview.md  02_create_sp.sql  03_server_config.md  03_sps_config.py
samples/: 00_overview.md  01_env_config.sql  02_create_sp.sql  03_sps_config.py  04_cleanup.sql
